# resend_email_rs

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  main.rs  success.rs
src/tests/: mod.rs
