[package]
name = "resend_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Lightweight mailing SDK for Resend.com"
repository = "https://github.com/floris-xlx/resend_rs"

[dependencies]
derive = "1.0.0"
dotenv = "0.15.0"
features = "0.10.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.198"
serde_derive = "1.0.198"
serde_json = "1.0.116"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }


[dev-dependencies]
