[package]
name = "resend_email_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Lightweight mailing SDK for Resend.com"
repository = "https://github.com/floris-xlx/resend_email_rs"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.198"
serde_derive = "1.0.198"
thiserror = "1.0.59"